# lana-bank

./: .editorconfig  .envrc  .gitattributes  .gitignore  .mcp.json  1  AUTH.md  AUTHN.md  AUTHZ.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rc  Dockerfile.release  EOL-SETUP.md  ERROR_HANDLING_COMPARISON.md  EVENT_SEQUENCE_PATTERNS.md  FUZZ_TESTING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JOB-GRACEFUL-SHUTDOWN.md  LICENSE  LOAN_AGREEMENT_ASYNC_IMPLEMENTATION.md  Makefile  NOTES-ledger-contract-changes.md  README.md  SQL_Security_Analysis_Report.md  URL_CONVERSION_SUMMARY.md  XSS_Security_Analysis.md  \  bacon.toml  bfx-integration-notes.md  bug_analysis_and_fixes.md  changes.patch  clippy.toml  cog.toml  dead_functions_analysis.md  deny.toml  docker-compose.dagster.yml  docker-compose.data.yml  (+31 more)
core/access/: Cargo.toml
core/access/event_schemas/: permission_set_event_schema.json  role_event_schema.json  user_event_schema.json
core/access/src/: bootstrap.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs
core/access/tests/: helpers.rs  role.rs  user.rs
core/accounting/: Cargo.toml
core/accounting-primitives/: Cargo.toml
core/accounting-primitives/src/: lib.rs
core/accounting-types/: Cargo.toml
core/accounting-types/src/: primitives.rs
core/accounting/src/: error.rs  event.rs  lib.rs  primitives.rs
core/accounting/tests/: chart_of_accounts.rs  closing.rs  helpers.rs  ledger_account.rs  ledger_transaction.rs  trial_balance.rs
core/applicant/: Cargo.toml
core/applicant/src/: error.rs  job_types.rs  lib.rs  repo.rs  sumsub_auth.rs  sumsub_testing_utils.rs  transaction_export.rs
core/applicant/tests/: sumsub_integration.rs
core/audit/: Cargo.toml
core/audit/src/: action.rs  lib.rs  object.rs
core/chart_of_accounts/: Cargo.toml
core/chart_of_accounts/src/: error.rs  event.rs  lib.rs  primitives.rs
core/chart_of_accounts/tests/: chart_of_accounts.rs
core/credit/: Cargo.toml
core/credit/.sqlx/: query-69d2d47af2b725bd2dccbef82dbc281d0a38b76678d782f2feb6a07b100cc7c4.json  query-9fa07fb4ec91ffe26656f871dab1714ca8f846c264071d321e7665a3cf365d70.json
core/credit/collateral/: Cargo.toml
core/credit/collection/: Cargo.toml
core/credit/collections/: Cargo.toml
core/credit/disbursal/: Cargo.toml
core/credit/src/: config.rs  error.rs  event.rs  for_subject.rs  lib.rs  obligation_aggregator.rs  payment_allocator.rs  primitives.rs  publisher.rs  terms.rs
core/credit/terms/: Cargo.toml
core/credit/tests/: chart_of_accounts_integration.rs  collateral.rs  credit_facility.rs  credit_facility_maturity.rs  credit_facility_proposal.rs  disbursal.rs  helpers.rs  interest_accrual.rs  obligation.rs  overpayment_integration.rs  pending_credit_facility.rs
core/custody/: Cargo.toml
core/custody/src/: config.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  webhook_notification_repo.rs
core/custody/tests/: helpers.rs  wallet.rs
core/customer/: Cargo.toml
core/customer/src/: config.rs  customer_activity_repo.rs  entity.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  repo.rs
core/customer/tests/: customer.rs  helpers.rs  prospect.rs
core/deposit/: Cargo.toml
core/deposit/.sqlx/: query-0a279b84d2f29146dafc99bf770102899ad0b50844769fa98c5ba241381f8c42.json  query-757b1e0f17b41faeb9705404e0bd13f995b6dc915c0fb117670a068de1c7696f.json  query-a274cbc0d1cece38d32d4df876de53aacc162dc19579a5eeaad0bd0f1a201a9f.json  query-d2c5579c7c4d97b7fe3a59d866defbd9e571c27c3e10b721fd19ef774828d140.json  query-e4de3c55491a57dd3c26166a936415df42cda76d8ca9c38888e8caca4651e39d.json
core/deposit/src/: chart_of_accounts_integration.rs  config.rs  deposit_account_activity_repo.rs  deposit_account_balance.rs  error.rs  event.rs  for_subject.rs  history.rs  lib.rs  primitives.rs  publisher.rs
core/deposit/tests/: chart_of_accounts_integration.rs  deposit.rs  helpers.rs  withdraw.rs
core/document-storage/: Cargo.toml
core/document-storage/src/: entity.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  repo.rs
core/domain-config/: Cargo.toml
core/domain-config/src/: cache.rs  complex.rs  config.rs  encryption.rs  entity.rs  error.rs  flavor.rs  job.rs  lib.rs  macros.rs  primitives.rs  publisher.rs  registry.rs  repo.rs  simple.rs  spec.rs  typed_domain_config.rs  value.rs  view.rs
core/domain-configurations/: Cargo.toml
core/domain-configurations/src/: entity.rs  error.rs  lib.rs  primitives.rs  publisher.rs  repo.rs
core/eod/: Cargo.toml
core/eod/src/: accrue_interest_command.rs  credit_facility_eod.rs  credit_facility_eod_process.rs  deposit_activity.rs  deposit_activity_process.rs  end_of_day_handler.rs  error.rs  event.rs  job_id.rs  lib.rs  obligation_transition.rs  obligation_transition_process.rs  phase.rs  primitives.rs  process_manager.rs  publisher.rs
core/fx/: Cargo.toml
core/fx/src/: error.rs  lib.rs  primitives.rs
core/ids/: Cargo.toml
core/ids/src/: lib.rs
core/money/: Cargo.toml
core/money/fuzz/: Cargo.toml  reproduce_crash.sh
core/money/src/: lib.rs
core/payment-link/: Cargo.toml
core/payment-link/src/: error.rs  event.rs  lib.rs  primitives.rs  publisher.rs
core/price/: Cargo.toml
core/price/src/: aggregator.rs  cache.rs  config.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  time.rs
core/price/tests/: helpers.rs  price.rs
core/report/: Cargo.toml
core/report/src/: config.rs  dagster_adapter.rs  entity.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  repo.rs  report_definition.rs
core/report/tests/: helpers.rs  report_run.rs
core/statements/: Cargo.toml
core/time-events/: Cargo.toml
dagster/generate_es_reports/: constants.py  generator.py  io.py  pyproject.toml  reports.yml  requirements.txt  validate_report_columns.py
dev/cala-dag-visualizer/: Cargo.toml
dev/chart-explorer/: Cargo.toml
dev/check-dependency-dag/: Cargo.toml
dev/codegen/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: money_conversions.rs
fuzz/targets/: account_parsing.rs  json_serialization.rs  money_arithmetic.rs
(+6887 files in other folders)
