[workspace]
resolver = "2"
members = [
  "lana/*",
  "core/*",
  "core/credit/*",
  "lib/*",
  "dev/codegen",
  "dev/entity-rollups",
  "dev/custom-lints",
  "dev/public-events-schema",
]
exclude = [
  "core/credit/src",
  "core/credit/tests",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [] }

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
# Internal dependencies
# Lib dependencies
audit = { path = "lib/audit" }
dagster = { path = "lib/dagster" }
authz = { path = "lib/authz" }
bfx-client = { path = "lib/bfx-client" }
bitgo = { path = "lib/bitgo" }
cloud-storage = { path = "lib/cloud-storage" }
jwks-utils = { path = "lib/jwks-utils" }
keycloak-client = { path = "lib/keycloak-client" }
komainu = { path = "lib/komainu" }
encryption = { path = "lib/encryption" }
gotenberg = { path = "lib/gotenberg" }
money = { path = "lib/money" }
permission-sets-macro = { path = "lib/permission-sets-macro" }
rendering = { path = "lib/rendering" }
smtp-client = { path = "lib/smtp-client" }
sumsub = { path = "lib/sumsub" }
tracing-macros = { path = "lib/tracing-macros" }
tracing-utils = { path = "lib/tracing-utils" }
command-job = { path = "lib/command-job" }

# Core dependencies
core-access = { path = "core/access" }
core-accounting = { path = "core/accounting" }
core-accounting-primitives = { path = "core/accounting-primitives" }
core-credit = { path = "core/credit" }
core-credit-collection = { path = "core/credit/collection" }
core-credit-terms = { path = "core/credit/terms" }
core-custody = { path = "core/custody" }
core-customer = { path = "core/customer" }
core-deposit = { path = "core/deposit" }
core-price = { path = "core/price" }
core-report = { path = "core/report" }
core-time-events = { path = "core/time-events" }
document-storage = { path = "core/document-storage" }
governance = { path = "core/governance" }
public-id = { path = "core/public-id" }
domain-config = { path = "core/domain-config" }

# Lana dependencies
admin-server = { path = "lana/admin-server" }
contract-creation = { path = "lana/contract-creation" }
customer-server = { path = "lana/customer-server" }
customer-sync = { path = "lana/customer-sync" }
dashboard = { path = "lana/dashboard" }
deposit-sync = { path = "lana/deposit-sync" }
lana-app = { path = "lana/app" }
lana-events = { path = "lana/events" }
lana-ids = { path = "lana/ids" }
notification = { path = "lana/notification" }
rbac-types = { path = "lana/rbac-types" }
sim-bootstrap = { path = "lana/sim-bootstrap" }
user-onboarding = { path = "lana/user-onboarding" }

# External dependencies
es-entity = { version = "0.10.19", features = ["event-context", "tracing-context", "instrument"] }
cala-ledger = "0.13.20"
cala-cel-interpreter = "0.13.20"
job = { version = "0.6.5", features = ["es-entity"] }
obix = { version = "0.2.14", features = ["tracing"] }

aes = "0.8"
anyhow = "1.0.101"
async-graphql = { version = "8.0.0-rc.3", default-features = false, features = [
  "dataloader",
  "chrono",
  "tempfile",
  "tracing",
  "tokio",
] }
async-graphql-axum = "8.0.0-rc.3"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", default-features = false, features = [
  "tracing",
  "typed-header",
] }
bip32 = "0.5"
ccm = "0.5"
csv = "1.4.0"
chrono = { version = "0.4.43", features = [
  "clock",
  "serde",
], default-features = false }
chrono-tz = "0.10.4"
clap = { version = "4.5.58", features = ["derive", "env"] }
derive_builder = "0.20.0"
heck = "0.5"
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "rust_decimal",
  "uuid",
  "chrono",
  "json",
] }
thiserror = "2.0.18"
uuid = { version = "1.21", features = ["serde", "v4"] }
log = "0.4"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
  "reqwest-rustls-webpki-roots"
] }
opentelemetry-http = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "signal",
  "tracing",
] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.149"
serde_with = "3.16.1"
futures = "0.3.29"
http = "1.4"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "multipart"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
url = { version = "2.5", features = ["serde"] }
rust_decimal_macros = "1.40.0"
rust_decimal = "1.40.0"
rusty-money = { version = "0.4", features = ["iso", "crypto"] }
base64 = { version = "0.22.1" }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
tower-http = { version = "0.6.8", features = ["cors"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"] }
sqlx-adapter = { version = "1.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
] }
cached = { version = "0.56.0", features = ["async"] }
walkdir = "2.5"
google-cloud-auth = { version = "1.5.0", default-features = false }
google-cloud-storage = { version = "1.7.0", default-features = false }
rand = "0.10"
serial_test = { version = "3.3.1", features = ["file_locks"] }
chacha20poly1305 = "0.10.1"
handlebars = "6.4.0"
inventory = "0.3.15"
schemars = { version = "1.2.1", features = ["derive", "chrono04", "rust_decimal1"] }
tempfile = "3.25.0"
p256 = "0.13.2"
paste = "1.0"
pbkdf2 = "0.12"
pkcs8 = { version = "0.10.2", features = ["encryption"] }
bytes = "1.11"
keycloak = "26.4.0"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
incremental = false
codegen-units = 64
opt-level = 0

[workspace.metadata.crane]
name = "lana-bank"
