[package]
name = "core-access"
version = "0.3.728-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

default = ["governance"]
fail-on-warnings = []
graphql = ["es-entity/graphql", "core-governance/graphql"]
governance = ["dep:core-governance"]
json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema", "outbox/json-schema", "core-governance/json-schema"]

[dependencies]
core-governance = { path = "../governance", optional = true }

audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
