[package]
name = "core-access"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
graphql = ["es-entity/graphql"]
json-schema = [
    "dep:schemars",
    "es-entity/json-schema",
    "audit/json-schema",
]

[dependencies]
core-ids = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
obix = { workspace = true }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
async-trait = { workspace = true }
obix = { workspace = true, features = ["test-utils"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
