[package]
name = "core-accounting"
license = "BUSL-1.1"
edition = "2024"

[features]
fail-on-warnings = []
graphql = [ "dep:async-graphql" ]
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema", "document-storage/json-schema", "core-accounting-contracts/json-schema"]

[dependencies]
core-accounting-contracts = { workspace = true }
permission-sets-macro = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
money = { workspace = true }
document-storage = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }
obix = { workspace = true }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sqlx = { workspace = true }

rust_decimal = { workspace = true }
base64 = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true }
async-trait = { workspace = true }
schemars = { workspace = true, optional = true }

tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
authz = { workspace = true, features = ["test-dummy"] }
rand = { workspace = true }
rust_decimal_macros = { workspace = true }
cala-cel-interpreter = { workspace = true }
