[package]
name = "core-applicant"
version = "0.3.754-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[package.metadata.cargo-machete]
ignored = []

[features]
default = []
fail-on-warnings = []
graphql = ["dep:async-graphql"]
json-schema = ["outbox/json-schema"]
sumsub-testing = []

[dependencies]
outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }
core-customer = { path = "../customer" }
core-money = { path = "../money" }

strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

async-graphql = { workspace = true, optional = true } 