[package]
name = "core-audit"
version = "0.3.772-dev"
license = "MIT"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["schemars", "serde", "sqlx", "thiserror"]

[features]
fail-on-warnings = []
json-schema = ["dep:schemars", "es-entity/json-schema", "authz/json-schema"]

[dependencies]
es-entity = { workspace = true }
authz = { path = "../../lib/authz" }
strum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true, optional = true }

