[package]
name = "chart_of_accounts"
version = "0.1.0"
edition = "2021"

[features]
fail-on-warnings = []

[dependencies]
audit = { path = "../../lib/audit" }

es-entity = { workspace = true }
sqlx = { workspace = true }

derive_builder = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
