[package]
name = "core-credit"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql", "core-credit-collection/graphql", "core-credit-collateral/graphql", "core-credit-terms/graphql"]
json-schema = [
    "dep:schemars",
    "cala-ledger/json-schema",
    "es-entity/json-schema",
    "money/json-schema",
    "job/json-schema",
    "core-price/json-schema",
    "public-id/json-schema",
    "core-credit-collection/json-schema",
    "core-credit-collateral/json-schema",
    "core-credit-terms/json-schema",
]
mock-custodian = ["core-custody/mock-custodian"]

[dependencies]
money = { workspace = true }
permission-sets-macro = { workspace = true }
core-price = { workspace = true }
core-customer = { workspace = true }
core-credit-collection = { path = "collection" }
core-time-events = { workspace = true }
core-credit-collateral = { path = "collateral" }
core-credit-terms = { path = "terms" }
core-custody = { workspace = true }
governance = { workspace = true }
core-accounting-primitives = { workspace = true }
domain-config = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
command-job = { workspace = true }
cloud-storage = { workspace = true }
public-id = { workspace = true }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
obix = { workspace = true, features = ["test-utils"] }
core-accounting = { workspace = true }
document-storage = { workspace = true }
authz = { workspace = true, features = ["test-dummy"] }
domain-config = { workspace = true, features = ["test-utils"] }
encryption = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
core-access = { workspace = true }
core-deposit = { workspace = true }
serial_test = { workspace = true }
