[package]
name = "core-custody"
license = "BUSL-1.1"
edition = "2024"

[features]
fail-on-warnings = []
graphql = ["dep:async-graphql", "es-entity/graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "encryption/json-schema"]
mock-custodian = []

[dependencies]
permission-sets-macro = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
bitgo = { workspace = true }
komainu = { workspace = true }
money = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
es-entity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
encryption = { workspace = true }
schemars = { workspace = true, optional = true }
uuid = { workspace = true }
url = { workspace = true }
http = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

async-graphql = { workspace = true, optional = true }

[dev-dependencies]
obix = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }
anyhow = { workspace = true }
