[package]
name = "core-customer"
version = "0.3.728-dev"
license = "FSL-1.1-ALv2"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["governance"]

[features]

default = ["governance"]
fail-on-warnings = []
graphql = ["es-entity/graphql", "core-governance?/graphql", "dep:async-graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "outbox/json-schema", "audit/json-schema"]
governance = ["dep:core-governance"]

[dependencies]

audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }
core-governance = { path = "../governance", optional = true }
core-document-storage = { path = "../document-storage" }
core-public-id = { path = "../public-id" }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
