[package]
name = "core-customer"
license = "BUSL-1.1"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["governance"]

[features]

default = ["governance"]
fail-on-warnings = []
graphql = ["es-entity/graphql", "governance?/graphql", "dep:async-graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema"]
governance = ["dep:governance"]
sumsub-testing = ["sumsub/sumsub-testing"]

[dependencies]
permission-sets-macro = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }
domain-config = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
governance = { workspace = true, optional = true }
document-storage = { workspace = true }
public-id = { workspace = true }
sumsub = { workspace = true }

es-entity = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
authz = { workspace = true, features = ["test-dummy"] }
document-storage = { workspace = true }
obix = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
cloud-storage = { workspace = true }
