[package]
name = "deposit"
version = "0.1.0"
edition = "2021"

[features]

fail-on-warnings = []
graphql = ["es-entity/graphql"]

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }
