[package]
name = "core-deposit"
license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
graphql = ["dep:async-graphql", "cala-ledger/graphql"]
json-schema = [
    "dep:schemars",
    "es-entity/json-schema",
    "cala-ledger/json-schema",
    "job/json-schema",
    "money/json-schema",
    "public-id/json-schema",
]

[dependencies]
money = { workspace = true }
permission-sets-macro = { workspace = true }
governance = { workspace = true }
core-customer = { workspace = true }
core-accounting-primitives = { workspace = true }
domain-config = { workspace = true }
public-id = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }
obix = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }

async-trait = { workspace = true }
cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true, features = ["persistence"] }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
async-graphql = { workspace = true, optional = true }
base64 = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
core-accounting = { workspace = true }
authz = { workspace = true, features = ["test-dummy"] }
domain-config = { workspace = true, features = ["test-utils"] }
document-storage = { workspace = true }
obix = { workspace = true, features = ["test-utils"] }
rand = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
rust_decimal_macros = { workspace = true }
