[package]
name = "document-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
fail-on-warnings = []
graphql = ["dep:async-graphql", "es-entity/graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "outbox/json-schema", "audit/json-schema"]

[dependencies]
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
outbox = { path = "../../lib/outbox" }
cloud-storage = { path = "../../lib/cloud-storage" }

es-entity = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true, optional = true }
async-graphql = { workspace = true, optional = true }
