[package]
name = "core-document-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, optional = true }
async-trait = { workspace = true }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }
chrono = { workspace = true }
cloud-storage = { path = "../../lib/cloud-storage" }
derive_builder = { workspace = true }
es-entity = { path = "../../lib/es-entity" }
handlebars = { workspace = true }
job = { path = "../../lib/job" }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
json-schema = ["schemars"]
graphql = ["async-graphql"]
