[package]
name = "domain-config"
edition = "2024"
license = "BUSL-1.1"

[package.metadata.cargo-machete]
ignored = ["async-graphql"]

[features]
fail-on-warnings = []
graphql = ["es-entity/graphql", "dep:async-graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema"]

[dependencies]
audit = { workspace = true }
authz = { workspace = true }
es-entity = { workspace = true }
serde = { workspace = true, features = ["derive"] }
derive_builder = { workspace = true }
serde_json = { workspace = true }
inventory = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
async-graphql = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
schemars = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
