[package]
name = "domain-configurations"
edition = "2024"
license = "BUSL-1.1"

[features]
fail-on-warnings = []

[dependencies]
anyhow = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
chrono = { workspace = true }
es-entity = { workspace = true }
outbox = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
