[package]
name = "core-eod"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
core-time-events = { workspace = true }
es-entity = { workspace = true }
job = { workspace = true }
obix = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
