[package]
name = "core-fx"
license = "BUSL-1.1"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]
chart-primitives = { workspace = true }
domain-config = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }

cala-ledger = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
permission-sets-macro = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
es-entity = { workspace = true }
uuid = { workspace = true }
