[package]
name = "core-ids"

license = "BUSL-1.1"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["serde", "sqlx", "schemars"]

[features]

fail-on-warnings = []
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema", "job/json-schema", "governance/json-schema"]
graphql = []

[dependencies]
governance = { workspace = true, features = ["graphql"] }
audit = { workspace = true }
document-storage = { workspace = true }
public-id = { workspace = true }

job = { workspace = true }

es-entity = { workspace = true, features = ["graphql"] }
cala-ledger = { workspace = true }

# Required by es_entity::entity_id macro
sqlx = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-utils = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
